fixes tag overflow issue

--- a/less/stream.less
+++ b/less/stream.less
@@ -137,9 +137,9 @@ div.stream-data {
 }
 
 .bootstrap-tagsinput {
-  .form-control;
   display: block;
   width: 100%;
+  padding: 6px 12px;
 }
 
 .has-feedback {
